parser/goyacc/y.output

state 0
	$accept: .input $end 

	EXPLAIN  shift 3
	CREATE  shift 12
	DROP  shift 10
	SELECT  shift 17
	FROM  shift 16
	.  error

	input  goto 1
	stmt  goto 2
	select_stmt  goto 4
	create_index_stmt  goto 5
	drop_index_stmt  goto 6
	create_primary_index_stmt  goto 8
	create_secondary_index_stmt  goto 9
	select_compound  goto 7
	select_core  goto 11
	select_select  goto 13
	select_from_required  goto 14
	select_select_head  goto 15

state 1
	$accept:  input.$end 

	$end  accept
	.  error


state 2
	input:  stmt.    (1)

	.  reduce 1 (src line 54)


state 3
	input:  EXPLAIN.stmt 

	CREATE  shift 12
	DROP  shift 10
	SELECT  shift 17
	FROM  shift 16
	.  error

	stmt  goto 18
	select_stmt  goto 4
	create_index_stmt  goto 5
	drop_index_stmt  goto 6
	create_primary_index_stmt  goto 8
	create_secondary_index_stmt  goto 9
	select_compound  goto 7
	select_core  goto 11
	select_select  goto 13
	select_from_required  goto 14
	select_select_head  goto 15

state 4
	stmt:  select_stmt.    (3)

	.  reduce 3 (src line 64)


state 5
	stmt:  create_index_stmt.    (4)

	.  reduce 4 (src line 68)


state 6
	stmt:  drop_index_stmt.    (5)

	.  reduce 5 (src line 71)


state 7
	select_stmt:  select_compound.    (20)

	.  reduce 20 (src line 222)


state 8
	create_index_stmt:  create_primary_index_stmt.    (6)

	.  reduce 6 (src line 78)


state 9
	create_index_stmt:  create_secondary_index_stmt.    (7)

	.  reduce 7 (src line 82)


state 10
	drop_index_stmt:  DROP.INDEX IDENTIFIER DOT IDENTIFIER 
	drop_index_stmt:  DROP.INDEX COLON IDENTIFIER DOT IDENTIFIER DOT IDENTIFIER 

	INDEX  shift 19
	.  error


state 11
	select_compound:  select_core.select_order select_limit_offset 
	select_order: .    (107)

	ORDER  shift 21
	.  reduce 107 (src line 921)

	select_order  goto 20

state 12
	create_primary_index_stmt:  CREATE.PRIMARY INDEX ON IDENTIFIER 
	create_primary_index_stmt:  CREATE.PRIMARY INDEX ON COLON IDENTIFIER DOT IDENTIFIER 
	create_primary_index_stmt:  CREATE.PRIMARY INDEX ON IDENTIFIER USING view_using 
	create_primary_index_stmt:  CREATE.PRIMARY INDEX ON COLON IDENTIFIER DOT IDENTIFIER USING view_using 
	create_secondary_index_stmt:  CREATE.INDEX IDENTIFIER ON IDENTIFIER LPAREN expression_list RPAREN 
	create_secondary_index_stmt:  CREATE.INDEX IDENTIFIER ON COLON IDENTIFIER DOT IDENTIFIER LPAREN expression_list RPAREN 
	create_secondary_index_stmt:  CREATE.INDEX IDENTIFIER ON IDENTIFIER LPAREN expression_list RPAREN USING view_using 
	create_secondary_index_stmt:  CREATE.INDEX IDENTIFIER ON COLON IDENTIFIER DOT IDENTIFIER LPAREN expression_list RPAREN USING view_using 

	PRIMARY  shift 22
	INDEX  shift 23
	.  error


state 13
	select_core:  select_select.select_from select_where select_group_having 
	select_from: .    (43)

	FROM  shift 25
	.  reduce 43 (src line 397)

	select_from  goto 24

state 14
	select_core:  select_from_required.select_where select_group_having select_select 
	select_where: .    (105)

	WHERE  shift 27
	.  reduce 105 (src line 905)

	select_where  goto 26

state 15
	select_select:  select_select_head.select_select_qualifier select_select_tail 
	select_select_qualifier: .    (30)

	DISTINCT  shift 30
	UNIQUE  shift 31
	ALL  shift 29
	.  reduce 30 (src line 295)

	select_select_qualifier  goto 28

state 16
	select_from_required:  FROM.data_source_unnest 
	select_from_required:  FROM.COLON IDENTIFIER DOT data_source_unnest 

	COLON  shift 33
	IDENTIFIER  shift 36
	.  error

	data_source_unnest  goto 32
	data_source  goto 34
	path  goto 35

state 17
	select_select_head:  SELECT.    (29)

	.  reduce 29 (src line 289)


state 18
	input:  EXPLAIN stmt.    (2)

	.  reduce 2 (src line 58)


state 19
	drop_index_stmt:  DROP INDEX.IDENTIFIER DOT IDENTIFIER 
	drop_index_stmt:  DROP INDEX.COLON IDENTIFIER DOT IDENTIFIER DOT IDENTIFIER 

	COLON  shift 38
	IDENTIFIER  shift 37
	.  error


state 20
	select_compound:  select_core select_order.select_limit_offset 
	select_limit_offset: .    (114)

	LIMIT  shift 41
	.  reduce 114 (src line 972)

	select_limit_offset  goto 39
	select_limit  goto 40

state 21
	select_order:  ORDER.BY sorting_list 

	BY  shift 42
	.  error


state 22
	create_primary_index_stmt:  CREATE PRIMARY.INDEX ON IDENTIFIER 
	create_primary_index_stmt:  CREATE PRIMARY.INDEX ON COLON IDENTIFIER DOT IDENTIFIER 
	create_primary_index_stmt:  CREATE PRIMARY.INDEX ON IDENTIFIER USING view_using 
	create_primary_index_stmt:  CREATE PRIMARY.INDEX ON COLON IDENTIFIER DOT IDENTIFIER USING view_using 

	INDEX  shift 43
	.  error


state 23
	create_secondary_index_stmt:  CREATE INDEX.IDENTIFIER ON IDENTIFIER LPAREN expression_list RPAREN 
	create_secondary_index_stmt:  CREATE INDEX.IDENTIFIER ON COLON IDENTIFIER DOT IDENTIFIER LPAREN expression_list RPAREN 
	create_secondary_index_stmt:  CREATE INDEX.IDENTIFIER ON IDENTIFIER LPAREN expression_list RPAREN USING view_using 
	create_secondary_index_stmt:  CREATE INDEX.IDENTIFIER ON COLON IDENTIFIER DOT IDENTIFIER LPAREN expression_list RPAREN USING view_using 

	IDENTIFIER  shift 44
	.  error


state 24
	select_core:  select_select select_from.select_where select_group_having 
	select_where: .    (105)

	WHERE  shift 27
	.  reduce 105 (src line 905)

	select_where  goto 45

state 25
	select_from:  FROM.data_source_unnest 
	select_from:  FROM.COLON IDENTIFIER DOT data_source_unnest 

	COLON  shift 47
	IDENTIFIER  shift 36
	.  error

	data_source_unnest  goto 46
	data_source  goto 34
	path  goto 35

state 26
	select_core:  select_from_required select_where.select_group_having select_select 
	select_group_having: .    (24)

	GROUP  shift 49
	.  reduce 24 (src line 252)

	select_group_having  goto 48

state 27
	select_where:  WHERE.expression 

	LBRACE  shift 54
	LBRACKET  shift 76
	TRUE  shift 71
	FALSE  shift 72
	NULL  shift 73
	INT  shift 74
	NUMBER  shift 75
	IDENTIFIER  shift 59
	STRING  shift 67
	MINUS  shift 56
	NOT  shift 55
	LPAREN  shift 61
	CASE  shift 62
	ANY  shift 63
	FIRST  shift 65
	ARRAY  shift 66
	EVERY  shift 64
	.  error

	expression  goto 50
	expr  goto 51
	subquery_expr  goto 52
	prefix_expr  goto 53
	suffix_expr  goto 57
	atom  goto 58
	literal_value  goto 60
	number  goto 68
	object  goto 69
	array  goto 70

state 28
	select_select:  select_select_head select_select_qualifier.select_select_tail 

	LBRACE  shift 54
	LBRACKET  shift 76
	TRUE  shift 71
	FALSE  shift 72
	NULL  shift 73
	INT  shift 74
	NUMBER  shift 75
	IDENTIFIER  shift 59
	STRING  shift 67
	MINUS  shift 56
	MULT  shift 82
	NOT  shift 55
	LPAREN  shift 61
	CASE  shift 62
	ANY  shift 63
	FIRST  shift 65
	ARRAY  shift 66
	EVERY  shift 64
	.  error

	expression  goto 81
	select_select_tail  goto 77
	result_list  goto 78
	result_single  goto 79
	dotted_path_star  goto 80
	expr  goto 83
	subquery_expr  goto 52
	prefix_expr  goto 53
	suffix_expr  goto 57
	atom  goto 58
	literal_value  goto 60
	number  goto 68
	object  goto 69
	array  goto 70

state 29
	select_select_qualifier:  ALL.    (31)

	.  reduce 31 (src line 298)


state 30
	select_select_qualifier:  DISTINCT.    (32)

	.  reduce 32 (src line 301)


state 31
	select_select_qualifier:  UNIQUE.    (33)

	.  reduce 33 (src line 311)


state 32
	select_from_required:  FROM data_source_unnest.    (46)

	.  reduce 46 (src line 426)


state 33
	select_from_required:  FROM COLON.IDENTIFIER DOT data_source_unnest 

	IDENTIFIER  shift 84
	.  error


state 34
	data_source_unnest:  data_source.    (48)
	data_source_unnest:  data_source.unnest_source 

	JOIN  shift 88
	UNNEST  shift 86
	NEST  shift 89
	INNER  shift 90
	LEFT  shift 91
	.  reduce 48 (src line 451)

	unnest_source  goto 85
	join_type  goto 87

state 35
	data_source:  path.    (97)
	data_source:  path.key_expr 
	data_source:  path.AS IDENTIFIER 
	data_source:  path.IDENTIFIER 
	data_source:  path.AS IDENTIFIER key_expr 
	data_source:  path.IDENTIFIER key_expr 
	path:  path.LBRACKET INT RBRACKET 
	path:  path.LBRACKET INT COLON INT RBRACKET 
	path:  path.LBRACKET INT COLON RBRACKET 
	path:  path.LBRACKET COLON INT RBRACKET 
	path:  path.DOT IDENTIFIER 

	AS  shift 93
	KEY  shift 97
	KEYS  shift 98
	LBRACKET  shift 95
	IDENTIFIER  shift 94
	DOT  shift 96
	.  reduce 97 (src line 838)

	key_expr  goto 92

state 36
	path:  IDENTIFIER.    (179)

	.  reduce 179 (src line 1468)


state 37
	drop_index_stmt:  DROP INDEX IDENTIFIER.DOT IDENTIFIER 

	DOT  shift 99
	.  error


state 38
	drop_index_stmt:  DROP INDEX COLON.IDENTIFIER DOT IDENTIFIER DOT IDENTIFIER 

	IDENTIFIER  shift 100
	.  error


state 39
	select_compound:  select_core select_order select_limit_offset.    (21)

	.  reduce 21 (src line 228)


state 40
	select_limit_offset:  select_limit.    (115)
	select_limit_offset:  select_limit.select_offset 

	OFFSET  shift 102
	.  reduce 115 (src line 976)

	select_offset  goto 101

state 41
	select_limit:  LIMIT.INT 

	INT  shift 103
	.  error


state 42
	select_order:  ORDER BY.sorting_list 

	LBRACE  shift 54
	LBRACKET  shift 76
	TRUE  shift 71
	FALSE  shift 72
	NULL  shift 73
	INT  shift 74
	NUMBER  shift 75
	IDENTIFIER  shift 59
	STRING  shift 67
	MINUS  shift 56
	NOT  shift 55
	LPAREN  shift 61
	CASE  shift 62
	ANY  shift 63
	FIRST  shift 65
	ARRAY  shift 66
	EVERY  shift 64
	.  error

	expression  goto 106
	expr  goto 51
	sorting_list  goto 104
	sorting_single  goto 105
	subquery_expr  goto 52
	prefix_expr  goto 53
	suffix_expr  goto 57
	atom  goto 58
	literal_value  goto 60
	number  goto 68
	object  goto 69
	array  goto 70

state 43
	create_primary_index_stmt:  CREATE PRIMARY INDEX.ON IDENTIFIER 
	create_primary_index_stmt:  CREATE PRIMARY INDEX.ON COLON IDENTIFIER DOT IDENTIFIER 
	create_primary_index_stmt:  CREATE PRIMARY INDEX.ON IDENTIFIER USING view_using 
	create_primary_index_stmt:  CREATE PRIMARY INDEX.ON COLON IDENTIFIER DOT IDENTIFIER USING view_using 

	ON  shift 107
	.  error


state 44
	create_secondary_index_stmt:  CREATE INDEX IDENTIFIER.ON IDENTIFIER LPAREN expression_list RPAREN 
	create_secondary_index_stmt:  CREATE INDEX IDENTIFIER.ON COLON IDENTIFIER DOT IDENTIFIER LPAREN expression_list RPAREN 
	create_secondary_index_stmt:  CREATE INDEX IDENTIFIER.ON IDENTIFIER LPAREN expression_list RPAREN USING view_using 
	create_secondary_index_stmt:  CREATE INDEX IDENTIFIER.ON COLON IDENTIFIER DOT IDENTIFIER LPAREN expression_list RPAREN USING view_using 

	ON  shift 108
	.  error


state 45
	select_core:  select_select select_from select_where.select_group_having 
	select_group_having: .    (24)

	GROUP  shift 49
	.  reduce 24 (src line 252)

	select_group_having  goto 109

state 46
	select_from:  FROM data_source_unnest.    (44)

	.  reduce 44 (src line 401)


state 47
	select_from:  FROM COLON.IDENTIFIER DOT data_source_unnest 

	IDENTIFIER  shift 110
	.  error


state 48
	select_core:  select_from_required select_where select_group_having.select_select 

	SELECT  shift 17
	.  error

	select_select  goto 111
	select_select_head  goto 15

state 49
	select_group_having:  GROUP.BY expression_list having 

	BY  shift 112
	.  error


state 50
	select_where:  WHERE expression.    (106)

	.  reduce 106 (src line 909)


state 51
	expression:  expr.    (119)
	expr:  expr.PLUS expr 
	expr:  expr.MINUS expr 
	expr:  expr.MULT expr 
	expr:  expr.DIV expr 
	expr:  expr.MOD expr 
	expr:  expr.CONCAT expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.EQ expr 
	expr:  expr.LT expr 
	expr:  expr.LTE expr 
	expr:  expr.GT expr 
	expr:  expr.GTE expr 
	expr:  expr.NE expr 
	expr:  expr.LIKE expr 
	expr:  expr.NOT LIKE expr 
	expr:  expr.DOT IDENTIFIER 
	expr:  expr.LBRACKET expr RBRACKET 
	expr:  expr.LBRACKET INT COLON INT RBRACKET 
	expr:  expr.LBRACKET INT COLON RBRACKET 
	expr:  expr.LBRACKET COLON INT RBRACKET 
	expr:  expr.IS NULL 
	expr:  expr.IS NOT NULL 
	expr:  expr.IS MISSING 
	expr:  expr.IS NOT MISSING 
	expr:  expr.IS VALUED 
	expr:  expr.IS NOT VALUED 

	LBRACKET  shift 130
	PLUS  shift 113
	MINUS  shift 114
	MULT  shift 115
	DIV  shift 116
	CONCAT  shift 118
	AND  shift 119
	OR  shift 120
	NOT  shift 128
	EQ  shift 121
	NE  shift 126
	GT  shift 124
	GTE  shift 125
	LT  shift 122
	LTE  shift 123
	LIKE  shift 127
	IS  shift 131
	DOT  shift 129
	MOD  shift 117
	.  reduce 119 (src line 1017)


state 52
	expression:  subquery_expr.    (120)

	.  reduce 120 (src line 1021)


state 53
	expr:  prefix_expr.    (150)

	.  reduce 150 (src line 1244)


state 54
	subquery_expr:  LBRACE.select_stmt RBRACE 
	subquery_expr:  LBRACE.select_stmt RBRACE subquery_expr 
	object:  LBRACE.RBRACE 
	object:  LBRACE.named_expression_list RBRACE 

	SELECT  shift 17
	FROM  shift 16
	RBRACE  shift 133
	STRING  shift 136
	.  error

	select_stmt  goto 132
	select_compound  goto 7
	select_core  goto 11
	select_select  goto 13
	select_from_required  goto 14
	select_select_head  goto 15
	named_expression_list  goto 134
	named_expression_single  goto 135

state 55
	prefix_expr:  NOT.prefix_expr 

	LBRACE  shift 138
	LBRACKET  shift 76
	TRUE  shift 71
	FALSE  shift 72
	NULL  shift 73
	INT  shift 74
	NUMBER  shift 75
	IDENTIFIER  shift 59
	STRING  shift 67
	MINUS  shift 56
	NOT  shift 55
	LPAREN  shift 61
	CASE  shift 62
	ANY  shift 63
	FIRST  shift 65
	ARRAY  shift 66
	EVERY  shift 64
	.  error

	prefix_expr  goto 137
	suffix_expr  goto 57
	atom  goto 58
	literal_value  goto 60
	number  goto 68
	object  goto 69
	array  goto 70

state 56
	prefix_expr:  MINUS.prefix_expr 

	LBRACE  shift 138
	LBRACKET  shift 76
	TRUE  shift 71
	FALSE  shift 72
	NULL  shift 73
	INT  shift 74
	NUMBER  shift 75
	IDENTIFIER  shift 59
	STRING  shift 67
	MINUS  shift 56
	NOT  shift 55
	LPAREN  shift 61
	CASE  shift 62
	ANY  shift 63
	FIRST  shift 65
	ARRAY  shift 66
	EVERY  shift 64
	.  error

	prefix_expr  goto 139
	suffix_expr  goto 57
	atom  goto 58
	literal_value  goto 60
	number  goto 68
	object  goto 69
	array  goto 70

state 57
	prefix_expr:  suffix_expr.    (153)

	.  reduce 153 (src line 1264)


state 58
	suffix_expr:  atom.    (154)

	.  reduce 154 (src line 1269)


state 59
	atom:  IDENTIFIER.    (155)
	atom:  IDENTIFIER.LPAREN RPAREN 
	atom:  IDENTIFIER.LPAREN function_arg_list RPAREN 
	atom:  IDENTIFIER.LPAREN DISTINCT function_arg_list RPAREN 
	atom:  IDENTIFIER.LPAREN UNIQUE function_arg_list RPAREN 

	LPAREN  shift 140
	.  reduce 155 (src line 1275)


state 60
	atom:  literal_value.    (156)

	.  reduce 156 (src line 1281)


state 61
	atom:  LPAREN.expression RPAREN 

	LBRACE  shift 54
	LBRACKET  shift 76
	TRUE  shift 71
	FALSE  shift 72
	NULL  shift 73
	INT  shift 74
	NUMBER  shift 75
	IDENTIFIER  shift 59
	STRING  shift 67
	MINUS  shift 56
	NOT  shift 55
	LPAREN  shift 61
	CASE  shift 62
	ANY  shift 63
	FIRST  shift 65
	ARRAY  shift 66
	EVERY  shift 64
	.  error

	expression  goto 141
	expr  goto 51
	subquery_expr  goto 52
	prefix_expr  goto 53
	suffix_expr  goto 57
	atom  goto 58
	literal_value  goto 60
	number  goto 68
	object  goto 69
	array  goto 70

state 62
	atom:  CASE.WHEN then_list else_expr END 

	WHEN  shift 142
	.  error


state 63
	atom:  ANY.expr SATISFIES expr END 
	atom:  ANY.IDENTIFIER IN expr SATISFIES expr END 

	LBRACE  shift 138
	LBRACKET  shift 76
	TRUE  shift 71
	FALSE  shift 72
	NULL  shift 73
	INT  shift 74
	NUMBER  shift 75
	IDENTIFIER  shift 144
	STRING  shift 67
	MINUS  shift 56
	NOT  shift 55
	LPAREN  shift 61
	CASE  shift 62
	ANY  shift 63
	FIRST  shift 65
	ARRAY  shift 66
	EVERY  shift 64
	.  error

	expr  goto 143
	prefix_expr  goto 53
	suffix_expr  goto 57
	atom  goto 58
	literal_value  goto 60
	number  goto 68
	object  goto 69
	array  goto 70

state 64
	atom:  EVERY.IDENTIFIER IN expr SATISFIES expr END 
	atom:  EVERY.expr SATISFIES expr END 

	LBRACE  shift 138
	LBRACKET  shift 76
	TRUE  shift 71
	FALSE  shift 72
	NULL  shift 73
	INT  shift 74
	NUMBER  shift 75
	IDENTIFIER  shift 145
	STRING  shift 67
	MINUS  shift 56
	NOT  shift 55
	LPAREN  shift 61
	CASE  shift 62
	ANY  shift 63
	FIRST  shift 65
	ARRAY  shift 66
	EVERY  shift 64
	.  error

	expr  goto 146
	prefix_expr  goto 53
	suffix_expr  goto 57
	atom  goto 58
	literal_value  goto 60
	number  goto 68
	object  goto 69
	array  goto 70

state 65
	atom:  FIRST.expr FOR IDENTIFIER IN expr WHEN expr END 
	atom:  FIRST.expr IN expr WHEN expr END 
	atom:  FIRST.expr FOR IDENTIFIER IN expr END 
	atom:  FIRST.expr IN expr END 

	LBRACE  shift 138
	LBRACKET  shift 76
	TRUE  shift 71
	FALSE  shift 72
	NULL  shift 73
	INT  shift 74
	NUMBER  shift 75
	IDENTIFIER  shift 59
	STRING  shift 67
	MINUS  shift 56
	NOT  shift 55
	LPAREN  shift 61
	CASE  shift 62
	ANY  shift 63
	FIRST  shift 65
	ARRAY  shift 66
	EVERY  shift 64
	.  error

	expr  goto 147
	prefix_expr  goto 53
	suffix_expr  goto 57
	atom  goto 58
	literal_value  goto 60
	number  goto 68
	object  goto 69
	array  goto 70

state 66
	atom:  ARRAY.expr FOR IDENTIFIER IN expr WHEN expr END 
	atom:  ARRAY.expr IN expr WHEN expr END 
	atom:  ARRAY.expr FOR IDENTIFIER IN expr END 
	atom:  ARRAY.expr IN expr END 

	LBRACE  shift 138
	LBRACKET  shift 76
	TRUE  shift 71
	FALSE  shift 72
	NULL  shift 73
	INT  shift 74
	NUMBER  shift 75
	IDENTIFIER  shift 59
	STRING  shift 67
	MINUS  shift 56
	NOT  shift 55
	LPAREN  shift 61
	CASE  shift 62
	ANY  shift 63
	FIRST  shift 65
	ARRAY  shift 66
	EVERY  shift 64
	.  error

	expr  goto 148
	prefix_expr  goto 53
	suffix_expr  goto 57
	atom  goto 58
	literal_value  goto 60
	number  goto 68
	object  goto 69
	array  goto 70

state 67
	literal_value:  STRING.    (191)

	.  reduce 191 (src line 1562)


state 68
	literal_value:  number.    (192)

	.  reduce 192 (src line 1568)


state 69
	literal_value:  object.    (193)

	.  reduce 193 (src line 1572)


state 70
	literal_value:  array.    (194)

	.  reduce 194 (src line 1576)


state 71
	literal_value:  TRUE.    (195)

	.  reduce 195 (src line 1580)


state 72
	literal_value:  FALSE.    (196)

	.  reduce 196 (src line 1586)


state 73
	literal_value:  NULL.    (197)

	.  reduce 197 (src line 1592)


state 74
	number:  INT.    (198)

	.  reduce 198 (src line 1600)


state 75
	number:  NUMBER.    (199)

	.  reduce 199 (src line 1606)


state 76
	array:  LBRACKET.RBRACKET 
	array:  LBRACKET.expression_list RBRACKET 

	LBRACE  shift 54
	LBRACKET  shift 76
	RBRACKET  shift 149
	TRUE  shift 71
	FALSE  shift 72
	NULL  shift 73
	INT  shift 74
	NUMBER  shift 75
	IDENTIFIER  shift 59
	STRING  shift 67
	MINUS  shift 56
	NOT  shift 55
	LPAREN  shift 61
	CASE  shift 62
	ANY  shift 63
	FIRST  shift 65
	ARRAY  shift 66
	EVERY  shift 64
	.  error

	expression_list  goto 150
	expression  goto 151
	expr  goto 51
	subquery_expr  goto 52
	prefix_expr  goto 53
	suffix_expr  goto 57
	atom  goto 58
	literal_value  goto 60
	number  goto 68
	object  goto 69
	array  goto 70

state 77
	select_select:  select_select_head select_select_qualifier select_select_tail.    (28)

	.  reduce 28 (src line 283)


state 78
	select_select_tail:  result_list.    (34)

	.  reduce 34 (src line 323)


state 79
	result_list:  result_single.    (35)
	result_list:  result_single.COMMA result_list 

	COMMA  shift 152
	.  reduce 35 (src line 337)


state 80
	result_single:  dotted_path_star.    (37)

	.  reduce 37 (src line 355)


state 81
	result_single:  expression.    (38)
	result_single:  expression.AS IDENTIFIER 
	result_single:  expression.IDENTIFIER 

	AS  shift 153
	IDENTIFIER  shift 154
	.  reduce 38 (src line 359)


state 82
	dotted_path_star:  MULT.    (41)

	.  reduce 41 (src line 382)


state 83
	dotted_path_star:  expr.DOT MULT 
	expression:  expr.    (119)
	expr:  expr.PLUS expr 
	expr:  expr.MINUS expr 
	expr:  expr.MULT expr 
	expr:  expr.DIV expr 
	expr:  expr.MOD expr 
	expr:  expr.CONCAT expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.EQ expr 
	expr:  expr.LT expr 
	expr:  expr.LTE expr 
	expr:  expr.GT expr 
	expr:  expr.GTE expr 
	expr:  expr.NE expr 
	expr:  expr.LIKE expr 
	expr:  expr.NOT LIKE expr 
	expr:  expr.DOT IDENTIFIER 
	expr:  expr.LBRACKET expr RBRACKET 
	expr:  expr.LBRACKET INT COLON INT RBRACKET 
	expr:  expr.LBRACKET INT COLON RBRACKET 
	expr:  expr.LBRACKET COLON INT RBRACKET 
	expr:  expr.IS NULL 
	expr:  expr.IS NOT NULL 
	expr:  expr.IS MISSING 
	expr:  expr.IS NOT MISSING 
	expr:  expr.IS VALUED 
	expr:  expr.IS NOT VALUED 

	LBRACKET  shift 130
	PLUS  shift 113
	MINUS  shift 114
	MULT  shift 115
	DIV  shift 116
	CONCAT  shift 118
	AND  shift 119
	OR  shift 120
	NOT  shift 128
	EQ  shift 121
	NE  shift 126
	GT  shift 124
	GTE  shift 125
	LT  shift 122
	LTE  shift 123
	LIKE  shift 127
	IS  shift 131
	DOT  shift 155
	MOD  shift 117
	.  reduce 119 (src line 1017)


state 84
	select_from_required:  FROM COLON IDENTIFIER.DOT data_source_unnest 

	DOT  shift 156
	.  error


state 85
	data_source_unnest:  data_source unnest_source.    (49)

	.  reduce 49 (src line 455)


state 86
	unnest_source:  UNNEST.path 
	unnest_source:  UNNEST.path AS IDENTIFIER 
	unnest_source:  UNNEST.path IDENTIFIER 
	unnest_source:  UNNEST.path unnest_source 
	unnest_source:  UNNEST.path AS IDENTIFIER unnest_source 
	unnest_source:  UNNEST.path IDENTIFIER unnest_source 

	IDENTIFIER  shift 36
	.  error

	path  goto 157

state 87
	unnest_source:  join_type.UNNEST path 
	unnest_source:  join_type.UNNEST path AS IDENTIFIER 
	unnest_source:  join_type.UNNEST path IDENTIFIER 
	unnest_source:  join_type.UNNEST path unnest_source 
	unnest_source:  join_type.UNNEST path AS IDENTIFIER unnest_source 
	unnest_source:  join_type.UNNEST path IDENTIFIER unnest_source 
	unnest_source:  join_type.UNNEST path key_expr 
	unnest_source:  join_type.UNNEST path IDENTIFIER key_expr 
	unnest_source:  join_type.UNNEST path AS IDENTIFIER key_expr 
	unnest_source:  join_type.UNNEST path key_expr unnest_source 
	unnest_source:  join_type.UNNEST path IDENTIFIER key_expr unnest_source 
	unnest_source:  join_type.UNNEST path AS IDENTIFIER key_expr unnest_source 
	unnest_source:  join_type.JOIN path join_key_expr 
	unnest_source:  join_type.JOIN path join_key_expr unnest_source 
	unnest_source:  join_type.JOIN path IDENTIFIER join_key_expr 
	unnest_source:  join_type.JOIN path IDENTIFIER join_key_expr unnest_source 
	unnest_source:  join_type.JOIN path AS IDENTIFIER join_key_expr 
	unnest_source:  join_type.JOIN path AS IDENTIFIER join_key_expr unnest_source 
	unnest_source:  join_type.NEST path join_key_expr 
	unnest_source:  join_type.NEST path join_key_expr unnest_source 
	unnest_source:  join_type.NEST path IDENTIFIER join_key_expr 
	unnest_source:  join_type.NEST path IDENTIFIER join_key_expr unnest_source 
	unnest_source:  join_type.NEST path AS IDENTIFIER join_key_expr 
	unnest_source:  join_type.NEST path AS IDENTIFIER join_key_expr unnest_source 

	JOIN  shift 159
	UNNEST  shift 158
	NEST  shift 160
	.  error


state 88
	unnest_source:  JOIN.path join_key_expr 
	unnest_source:  JOIN.path AS IDENTIFIER join_key_expr 
	unnest_source:  JOIN.path IDENTIFIER join_key_expr 
	unnest_source:  JOIN.path join_key_expr unnest_source 
	unnest_source:  JOIN.path AS IDENTIFIER join_key_expr unnest_source 
	unnest_source:  JOIN.path IDENTIFIER join_key_expr unnest_source 

	IDENTIFIER  shift 36
	.  error

	path  goto 161

state 89
	unnest_source:  NEST.path join_key_expr 
	unnest_source:  NEST.path AS IDENTIFIER join_key_expr 
	unnest_source:  NEST.path IDENTIFIER join_key_expr 
	unnest_source:  NEST.path join_key_expr unnest_source 
	unnest_source:  NEST.path AS IDENTIFIER join_key_expr unnest_source 
	unnest_source:  NEST.path IDENTIFIER join_key_expr unnest_source 

	IDENTIFIER  shift 36
	.  error

	path  goto 162

state 90
	join_type:  INNER.    (94)

	.  reduce 94 (src line 821)


state 91
	join_type:  LEFT.    (95)
	join_type:  LEFT.OUTER 

	OUTER  shift 163
	.  reduce 95 (src line 826)


state 92
	data_source:  path key_expr.    (98)

	.  reduce 98 (src line 844)


state 93
	data_source:  path AS.IDENTIFIER 
	data_source:  path AS.IDENTIFIER key_expr 

	IDENTIFIER  shift 164
	.  error


state 94
	data_source:  path IDENTIFIER.    (100)
	data_source:  path IDENTIFIER.key_expr 

	KEY  shift 97
	KEYS  shift 98
	.  reduce 100 (src line 857)

	key_expr  goto 165

state 95
	path:  path LBRACKET.INT RBRACKET 
	path:  path LBRACKET.INT COLON INT RBRACKET 
	path:  path LBRACKET.INT COLON RBRACKET 
	path:  path LBRACKET.COLON INT RBRACKET 

	COLON  shift 167
	INT  shift 166
	.  error


state 96
	path:  path DOT.IDENTIFIER 

	IDENTIFIER  shift 168
	.  error


state 97
	key_expr:  KEY.expr 

	LBRACE  shift 138
	LBRACKET  shift 76
	TRUE  shift 71
	FALSE  shift 72
	NULL  shift 73
	INT  shift 74
	NUMBER  shift 75
	IDENTIFIER  shift 59
	STRING  shift 67
	MINUS  shift 56
	NOT  shift 55
	LPAREN  shift 61
	CASE  shift 62
	ANY  shift 63
	FIRST  shift 65
	ARRAY  shift 66
	EVERY  shift 64
	.  error

	expr  goto 169
	prefix_expr  goto 53
	suffix_expr  goto 57
	atom  goto 58
	literal_value  goto 60
	number  goto 68
	object  goto 69
	array  goto 70

state 98
	key_expr:  KEYS.expr 

	LBRACE  shift 138
	LBRACKET  shift 76
	TRUE  shift 71
	FALSE  shift 72
	NULL  shift 73
	INT  shift 74
	NUMBER  shift 75
	IDENTIFIER  shift 59
	STRING  shift 67
	MINUS  shift 56
	NOT  shift 55
	LPAREN  shift 61
	CASE  shift 62
	ANY  shift 63
	FIRST  shift 65
	ARRAY  shift 66
	EVERY  shift 64
	.  error

	expr  goto 170
	prefix_expr  goto 53
	suffix_expr  goto 57
	atom  goto 58
	literal_value  goto 60
	number  goto 68
	object  goto 69
	array  goto 70

state 99
	drop_index_stmt:  DROP INDEX IDENTIFIER DOT.IDENTIFIER 

	IDENTIFIER  shift 171
	.  error


state 100
	drop_index_stmt:  DROP INDEX COLON IDENTIFIER.DOT IDENTIFIER DOT IDENTIFIER 

	DOT  shift 172
	.  error


state 101
	select_limit_offset:  select_limit select_offset.    (116)

	.  reduce 116 (src line 980)


state 102
	select_offset:  OFFSET.INT 

	INT  shift 173
	.  error


state 103
	select_limit:  LIMIT INT.    (117)

	.  reduce 117 (src line 986)


state 104
	select_order:  ORDER BY sorting_list.    (108)

	.  reduce 108 (src line 923)


state 105
	sorting_list:  sorting_single.    (109)
	sorting_list:  sorting_single.COMMA sorting_list 

	COMMA  shift 174
	.  reduce 109 (src line 929)

